isc-dhcp (4.1.1-P1-8) UNRELEASED; urgency=low

  * debian/dhcp3-client.postrm: bring back to clean up cruft (closes: #588203)
  * debian/dhcp3-server.postrm: bring back to clean up cruft
  * Updated French debconf templates translation (closes: #588281)
  * debian/isc-dhcp-server.templates: corrected /etc/dhcp3 -> /etc/dhcp

 -- Andrew Pollock <apollock@debian.org>  Tue, 06 Jul 2010 17:38:58 -0700

isc-dhcp (4.1.1-P1-7) unstable; urgency=low

  * The "There goes the neighbourhood" release
  * No changes rebuild to upload to unstable

 -- Andrew Pollock <apollock@debian.org>  Sun, 04 Jul 2010 22:58:02 -0700

isc-dhcp (4.1.1-P1-6) experimental; urgency=low

  * debian/rules: configure client to use correct path for DHCPv6 leases file
    (closes: #587884)

 -- Andrew Pollock <apollock@debian.org>  Fri, 02 Jul 2010 21:04:16 -0700

isc-dhcp (4.1.1-P1-5) experimental; urgency=low

  * split out the udeb dhclient-script so there's one for Linux and one for
    kFreeBSD (closes: #551054)

 -- Andrew Pollock <apollock@debian.org>  Tue, 29 Jun 2010 22:34:06 -0700

isc-dhcp (4.1.1-P1-4) experimental; urgency=low

  * debian/rules: really enable DHCPv6 (closes: #587269)
  * debian/control: conflict with resolvconf <= 1.45 (closes: #586095)

 -- Andrew Pollock <apollock@debian.org>  Sat, 26 Jun 2010 22:33:43 -0700

isc-dhcp (4.1.1-P1-3) experimental; urgency=low

  * debian/rules: stop invoking dh_installinit with --noscripts so the
    update-rc.d stuff is done properly
  * debian/isc-dhcp-{relay,server}.{postinst,postrm}: remove calls to
    update-rc.d and invoke-rc.d, let dh_installinit handle it
  * debian/isc-dhcp-server.init.d: add a start-time dependency on $named
    (closes: #586035)
  * debian/{rules,isc-dhcp-server.{prerm,postinst}}: ignore failure to start
    the DHCP server

 -- Andrew Pollock <apollock@debian.org>  Tue, 15 Jun 2010 23:20:30 -0700

isc-dhcp (4.1.1-P1-2) experimental; urgency=low
