@@ -3,8 +3,8 @@ Section: net
 Priority: important
 Maintainer: Debian ISC DHCP maintainers <pkg-dhcp-devel@lists.alioth.debian.org>
 Uploaders: Andrew Pollock <apollock@debian.org>
-Build-Depends: debhelper (>> 7), dpkg-dev (>= 1.13.2), groff, dpatch, po-debconf, libldap2-dev, libssl-dev
-Standards-Version: 3.8.4
+Build-Depends: debhelper (>> 7), dpkg-dev (>= 1.13.2), groff, dpatch, po-debconf, libldap2-dev, libssl-dev, autoconf, automake
+Standards-Version: 3.9.0
 
 Package: isc-dhcp-server
 Priority: optional
