@@ -4,8 +4,11 @@ isc-dhcp (4.1.1-P1-8) UNRELEASED; urgency=low
   * debian/dhcp3-server.postrm: bring back to clean up cruft
   * Updated French debconf templates translation (closes: #588281)
   * debian/isc-dhcp-server.templates: corrected /etc/dhcp3 -> /etc/dhcp
+  * debian/rules: correctly build LDAP-enabled DHCP server (closes: #574754)
+  * debian/control: build-depend on autoconf and automake
+  * debian/control: bump Standards-Version (no changes)
 
- -- Andrew Pollock <apollock@debian.org>  Tue, 06 Jul 2010 17:38:58 -0700
+ -- Andrew Pollock <apollock@debian.org>  Wed, 07 Jul 2010 23:24:31 -0700
 
 isc-dhcp (4.1.1-P1-7) unstable; urgency=low
 
